<resources>
    <string name="app_name">UB二手书</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="admin">管理员</string>
    <string name="title_activity_login">登</string>

    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="login">登陆</string>
    <string name="pending_audit">待审核</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="contacts">联系人</string>
    <string name="shop_name">店名</string>
    <string name="contact_number">联系电话</string>
    <string name="address">地址</string>
    <string name="id">身份证号码</string>
    <string name="id_front">身份证正面照</string>
    <string name="id_back">身份证背面照</string>

    <string name="audit_success">审核通过</string>
    <string name="audit_failure">审核失败</string>

    <string name="submit">提交</string>
    <string name="book_empty">暂无数据，休息一下吧</string>
    <string name="user_manage">用户管理</string>
    <string name="mobile_no">手机号码：</string>
    <string name="user_name">用户名：</string>
    <string name="user_manage_empty">暂无用户</string>
    <string name="register_time">注册时间：</string>
    <string name="mobileno">手机号：</string>
    <string name="username">用户名：</string>
    <string name="sex">性别：</string>
    <string name="age">年龄</string>
    <string name="role">角色</string>
    <string name="update_time">更新时间：</string>
    <string name="goto_shop">查看书店</string>
    <string name="audit_state">审核状态</string>
    <string name="book_manage">书籍管理</string>
    <string name="about">关于</string>
    <string name="statistics">数据统计</string>
    <string name="stock">库存</string>
    <string name="sales_volume">销量</string>
    <string name="goto_books">查看书店书籍</string>
    <string name="book_name">书名</string>
    <string name="isbn">isbn</string>
    <string name="author">作者</string>
    <string name="press">出版社</string>
    <string name="price">售价</string>
    <string name="category">分类</string>
    <string name="percent_describe">品相</string>
    <string name="comment">评论</string>
    <string name="comment_empty">暂无评论</string>
    <string name="grade">评分</string>
    <string name="logout">退出登录</string>
    <string name="action_about">关于</string>
    <string name="publish_notice">发布通知</string>
    <string name="push_message_content">消息内容</string>
    <string name="stastics">数据统计</string>
    <string name="user_stastics">用户信息统计</string>
    <string name="shop_stastics">商户信息统计</string>
    <string name="order_stastics">订单统计</string>
    <string name="user_register_time_statistics">用户注册时间统计</string>
    <string name="user_role_statistics">用户卖家比例</string>
    <string name="user_age_statistics">用户年龄统计</string>
    <string name="user_sex_statistics">用户性别</string>
    <string name="shop_register_time_statistics">商铺注册时间统计</string>
    <string name="shop_province_statistics">商铺所在省份统计</string>
    <string name="address_province_statistics">收货地址</string>
</resources>
