<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pending_audit"
            android:icon="@mipmap/peding_audit"
            android:title="@string/pending_audit" />
        <item
            android:id="@+id/nav_user_manage"
            android:icon="@mipmap/user_manage"
            android:title="@string/user_manage" />
        <item
            android:id="@+id/nav_book_manage"
            android:icon="@mipmap/book_manage"
            android:title="@string/book_manage" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@mipmap/statistics"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_publish_notice"
            android:icon="@mipmap/push"
            android:title="@string/publish_notice" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/about"
            android:title="@string/about" />
    </group>

</menu>
