<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/box_bg"
    android:orientation="horizontal"
    android:padding="10dp">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_user_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        app:placeholderImage="@mipmap/default_user_img"
        app:roundAsCircle="true" />

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="@dimen/xlarge_dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no" />

            <TextView
                android:id="@+id/tv_user_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="13122392221" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="海阔天空" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_time" />

            <TextView
                android:id="@+id/tv_register_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="2016-04-10" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>